add_definitions(-DVK_USE_PLATFORM_XCB_KHR)

add_subdirectory(Common)

include_directories(${BASE_APP_INCLUDE_DIRS})

add_executable(01_InitRaytracing 01_InitRaytracing/01_InitRaytracing.cpp)
add_executable(02_AccelerationStructure 02_AccelerationStructure/02_AccelerationStructure.cpp)
add_executable(03_Pipeline 03_Pipeline/03_Pipeline.cpp)
add_executable(04_DescriptorSet 04_DescriptorSet/04_DescriptorSet.cpp)
add_executable(05_RayGen 05_RayGen/05_RayGen.cpp)
add_executable(06_Shaders 06_Shaders/06_Shaders.cpp)
add_executable(07_InstanceBuffer 07_InstanceBuffer/07_InstanceBuffer.cpp)
add_executable(08_AnimateAndRefit 08_AnimateAndRefit/08_AnimateAndRefit.cpp)
add_executable(09_SecondaryRays 09_SecondaryRays/09_SecondaryRays.cpp)
add_executable(10_InstanceResources 10_InstanceResources/10_InstanceResources.cpp)
add_executable(11_DifferentVertexFormats 11_DifferentVertexFormats/11_DifferentVertexFormats.cpp)

target_link_libraries(01_InitRaytracing base_app)
target_link_libraries(02_AccelerationStructure base_app)
target_link_libraries(03_Pipeline base_app)
target_link_libraries(04_DescriptorSet base_app)
target_link_libraries(05_RayGen base_app)
target_link_libraries(06_Shaders base_app)
target_link_libraries(07_InstanceBuffer base_app)
target_link_libraries(08_AnimateAndRefit base_app)
target_link_libraries(09_SecondaryRays base_app)
target_link_libraries(10_InstanceResources base_app)
target_link_libraries(11_DifferentVertexFormats base_app)
